// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recurrence bundles (with existing recurrences) should update existing bundles 1`] = `
"
Cozy Cloud                                         |    3963.13 |      3 operations |  from 2018-06-01 to 2018-09-28 |    59.5
Edf Clients Particuliers                           |      -36.6 |      9 operations |  from 2018-08-24 to 2019-04-24 |      31
Free Telecom                                       |     -31.98 |     12 operations |  from 2018-05-07 to 2019-04-05 |      30
Navigo Annuel Gie Comutitres                       |      -75.2 |     10 operations |  from 2018-06-04 to 2019-04-03 |      31
Paypal Europe S A R L Et Cie S C A Ech             |     -13.99 |      4 operations |  from 2018-05-29 to 2018-10-30 |      32
Vr Permanent Bourso                                |        -60 |     11 operations |  from 2018-06-04 to 2019-04-02 |    30.5
Vr Permanent Loyer Douillet                        |    -913.01 |     11 operations |  from 2018-06-04 to 2019-04-03 |      31"
`;

exports[`recurrence bundles (with existing recurrences) should update existing bundles 2`] = `
"
Cozy Cloud                                         |    3963.13 |      3 operations |  from 2018-06-01 to 2018-09-28 |    59.5
Echeance Pret 03103 61893938                       |   -1281.82 |      9 operations |  from 2019-05-06 to 2020-01-06 |    30.5
Edf Clients Particuliers                           |      -36.6 |      9 operations |  from 2018-08-24 to 2019-04-24 |      31
Free Mobile                                        |     -17.99 |      9 operations |  from 2019-05-20 to 2020-01-20 |      30
Free Telecom                                       |     -29.99 |      6 operations |  from 2019-09-05 to 2020-02-06 |      30
Free Telecom                                       |     -31.98 |     12 operations |  from 2018-05-07 to 2019-04-05 |      30
Navigo Annuel Gie Comutitres                       |      -75.2 |     10 operations |  from 2018-06-04 to 2019-04-03 |      31
Navigo Annuel Gie Comutitres                       |      -75.2 |     10 operations |  from 2019-05-03 to 2020-03-03 |      31
Paypal Europe S A R L Et Cie S C A Ech             |     -13.99 |      4 operations |  from 2018-05-29 to 2018-10-30 |      32
Vr Permanent Bourso                                |        -60 |     11 operations |  from 2018-06-04 to 2019-04-02 |    30.5
Vr Permanent Bourso                                |        -60 |     11 operations |  from 2019-05-02 to 2020-03-02 |      31
Vr Permanent Loyer Douillet                        |    -913.01 |     11 operations |  from 2018-06-04 to 2019-04-03 |    30.5"
`;
